--- a/src/app/dialogs/orderDialogs/order-detail-dialog/order-detail-dialog.component.html
+++ b/src/app/dialogs/orderDialogs/order-detail-dialog/order-detail-dialog.component.html
@@ -46,7 +46,7 @@
             <h6 class="card-title">Shipping Address</h6>
             <div class="address-text">
               {{ order.userAddress?.addressLine1 }}<br>
-              {{ order.userAddress?.city }}, {{ order.userAddress?.postalCode }}
+              {{ order.userAddress?.cityName }}, {{ order.userAddress?.postalCode }}
             </div>
           </div>
         </div>
