--- a/src/app/ui/components/product/product-card/product-card.component.html
+++ b/src/app/ui/components/product/product-card/product-card.component.html
@@ -27,13 +27,13 @@
 
   </div>
 
-  <button class="product-add-to-cart-button" [disabled]="product.stock <= 0" (click)="onAddToCart($event)">
+  <button class="product-add-to-cart-button" [disabled]="!isProductAvailable(product)" (click)="addToCart($event)">
     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" 
       stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="cart-icon">
       <circle cx="9" cy="21" r="1"></circle>
       <circle cx="20" cy="21" r="1"></circle>
       <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path>
     </svg>
-    {{product.stock > 0 ? 'Add to Cart For Offer' : 'Out of Stock'}}
+    {{product.stock === -1 ? 'Add to Cart For Offer' : (product.stock > 0 ? 'Add to Cart For Offer' : 'Out of Stock')}}
   </button>
 </div>
