--- a/src/app/ui/components/product/product-detail/product-detail.component.scss
+++ b/src/app/ui/components/product/product-detail/product-detail.component.scss
@@ -47,7 +47,7 @@ $link-color: #0000ee;
   margin: 1rem 0;
 
   .Btn {
-    width: 160px;
+    max-width: 100%;
     height: 35px;
     display: flex;
     align-items: center;
@@ -65,7 +65,7 @@ $link-color: #0000ee;
     padding-top: 0px;
   
     .leftContainer {
-      width: 50%;
+      width: 45px;
       height: 100%;
       background-color: rgb(238, 0, 0);
       display: flex;
@@ -86,7 +86,7 @@ $link-color: #0000ee;
     }
   
     .likeCount {
-      width: 50%;
+      min-width: 45px;
       height: 100%;
       display: flex;
       align-items: center;
@@ -95,6 +95,7 @@ $link-color: #0000ee;
       font-weight: 600;
       position: relative;
       background-color: white;
+      margin: 0 7px 0 7px;
   
       &::before {
         height: 8px;
@@ -103,7 +104,7 @@ $link-color: #0000ee;
         content: "";
         background-color: rgb(255, 255, 255);
         transform: rotate(45deg);
-        left: -4px;
+        left: -11px;
       }
     }
   
@@ -297,10 +298,11 @@ $link-color: #0000ee;
   }
 
   .product-price {
-    font-size: 2rem;
+    font-size: 1rem;
     font-weight: bold;
     color: $primary-color;
     margin-bottom: 0.5rem;
+    opacity: 0.7;
   }
 
   .product-ratings {
@@ -335,15 +337,15 @@ $link-color: #0000ee;
   .product-sku {
     font-size: 0.9rem;
     color: lighten($text-color, 20%);
-    margin-bottom: 1rem;
+    margin-bottom: 0rem;
   }
 
   .product-feature-selector {
     margin-bottom: 1.5rem;
 
     h3 {
-      font-size: 1rem;
-      margin-bottom: 0.5rem;
+      font-size: 14px;
+      margin-bottom: 0rem;
       color: $text-color;
       font-weight: 500;
     }
@@ -458,7 +460,7 @@ $link-color: #0000ee;
     }
   }
 
-  .add-to-cart-button {
+  .product-add-to-cart-button {
     flex-grow: 1;
     padding: 0.75rem;
     font-size: 1rem;
